# cmake_examples

example_1/: CMakeLists.txt  main.cpp  semple_config.h.in
example_1/my_library/: CMakeLists.txt  my_library.cpp  my_library.h
